# REQ-2026.1-T01-DoaNet

./: .gitignore  README.md
.github/workflows/: gh-pages.yml
backend/: .env.example  pyproject.toml  test.rest.EXAMPLE
backend/app/api/: __init__.py  health.py
backend/config/: settings.py
backend/server/: serializers.py  settings.py  urls.py  views.py
backend/src/: __init__.py  main.py
backend/src/adapters/: __init__.py
backend/src/adapters/db/: __init__.py  mongo_connection.py  mongo_feed_repository.py
backend/src/adapters/http/: __init__.py  routes.py  serializers.py
backend/src/application/services/: __init__.py  feed_service.py
backend/src/config/: database.py
backend/src/domain/entities/: feed_item.py
backend/src/domain/ports/: feed_repository.py
backend/src/models/: feed_items.py
backend/src/routes/: __init__.py  routes.py
backend/src/schema/: __init__.py  schemas.py
frontend/lib/: main.dart  page_structure.dart
frontend/lib/pages/: colaboracao_page.dart  feed_page.dart  transparencia_page.dart
gh-pages/: mkdocs.yml
gh-pages/docs/: api-para-iniciantes.md  example.md  index.md  mkdocs-tutorial.md  poetry-django-setup.md  visaodeproduto.md
gh-pages/docs/atas/: ata1_27_04_2026.md  ata2_04_05_2026.md  ata3_11_05_2026.md  modelo.md
gh-pages/docs/visao_produto/: 1-cenario.md  10-backlog_do_produto.md  10-licoes.md  11-licoes.md  2-solucao.md  3-IntervencaoSocial.md  3-estrategia.md  4-EngenhariadeRequisitos.md  4-estrategia.md  5-EngenhariadeRequisitos.md  5-planejamento.md  6-interacao.md  7-interacao.md  8-requisitos.md  9-DorEDod.md  backlog_do_produto.md
