[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "pedruck",email = "pedrodmreis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymongo[srv] (>=4.17.0,<5.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
